# crab-crawler

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: rust.yml
db/: crawl_results.db
db/migrations/: 012425_init.sql
src/: config.rs  constants.rs  crawl.rs  data.rs  http.rs  main.rs  sqlite.rs  tests.rs  tools.rs
