[package]
name = "crab-crawler"
version = "0.6.9"
edition = "2021"

[[bin]]
name = "crab-crawler"
path = "src/main.rs"

[dependencies]
reqwest = {version = "*", features = ["blocking", "json"]}
scraper = "*"
url = "*"
tokio = {version = "*", features = ["full"]}
rayon = "*"
regex = "*"
chrono = "*"
rusqlite = {version = "*", features = ["bundled"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# A good example toml: https://github.com/seanmonstar/reqwest/blob/master/Cargo.toml

