[package]
name = "data-crawler"
version = "0.6.9"
edition = "2021"

[[bin]]
name = "data-crawler"
path = "src/main.rs"

[dependencies]
reqwest = {version = "*", features = ["blocking", "json"]}
scraper = "*"
url = "*"
tokio = {version = "*", features = ["full"]}
rayon = "*"
regex = "*"
chrono = "*"
rusqlite = {version = "*", features = ["bundled"]}
rand = "*"
robotstxt = "*"
lazy_static = "*"

